<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.activity.SplashActivity">

    <LinearLayout
        android:id="@+id/activity_splash_circle_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_splash_container_height"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_splash_a_textview"
            android:layout_width="@dimen/activity_splash_circle_radious"
            android:layout_height="@dimen/activity_splash_circle_radious"
            android:layout_marginLeft="@dimen/activity_splash_circle_left_margin"
            android:layout_marginRight="@dimen/activity_splash_circle_internal_margin"
            android:background="@drawable/blue_circle"
            android:gravity="center"
            android:text="@string/activity_splash_a_letter"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_splash_circle_text_size"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/activity_splash_r_textview"
            android:layout_width="@dimen/activity_splash_circle_radious"
            android:layout_height="@dimen/activity_splash_circle_radious"
            android:layout_marginLeft="@dimen/activity_splash_circle_internal_margin"
            android:layout_marginRight="@dimen/activity_splash_circle_internal_margin"
            android:background="@drawable/green_circle"
            android:gravity="center"
            android:text="@string/activity_splash_r_letter"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_splash_circle_text_size"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/activity_splash_t_textview"
            android:layout_width="@dimen/activity_splash_circle_radious"
            android:layout_height="@dimen/activity_splash_circle_radious"
            android:layout_marginLeft="@dimen/activity_splash_circle_internal_margin"
            android:layout_marginRight="@dimen/activity_splash_circle_internal_margin"
            android:background="@drawable/red_circle"
            android:gravity="center"
            android:text="@string/activity_splash_t_letter"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_splash_circle_text_size"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/activity_splash_s_textview"
            android:layout_width="@dimen/activity_splash_circle_radious"
            android:layout_height="@dimen/activity_splash_circle_radious"
            android:layout_marginLeft="@dimen/activity_splash_circle_internal_margin"
            android:layout_marginRight="@dimen/activity_splash_circle_right_margin"
            android:background="@drawable/yellow_circle"
            android:gravity="center"
            android:text="@string/activity_splash_s_letter"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_splash_circle_text_size"
            android:visibility="invisible" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="@dimen/activity_splash_develop_by_container_width"
        android:layout_height="@dimen/activity_splash_container_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity_splash_developed_by_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_splash_developed_by_margin_right"
            android:gravity="right"
            android:text="@string/activity_splash_developed_by"
            android:textColor="@color/silver_sand" />


    </LinearLayout>


</RelativeLayout>